--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
-  "name": "react-starter",
+
+  "name": "react-flux-todoMVC-starter",
+  "description": "react-flux-todoMVC-starter project",
   "browserify": {
     "transform": [
       "reactify"
@@ -13,6 +15,11 @@
   "dependencies": {
     "browserify": "^10.2.6",
     "ecstatic": "~0.8.0",
+    "classnames": "^2.1.3",
+    "ecstatic": "~0.8.0",
+    "flux": "^2.1.1",
+    "keymirror": "^0.1.1",
+    "object-assign": "^4.0.1",
     "react": "~0.13.3",
     "reactify": "^1.1.1",
     "uglify": "~0.1.5",
